# cmake-shp

./: .gitignore  CMakeLists.txt  clip.py  clip_zip.py  cmake_shp.cpp  cmake_shp.h  gansu.py  main.py  nemeng.py  pl.py  pl2 copy.py  pl2.py  qinghai.py  sichuan.py  vcpkg.json  xinjiang.py  xizang copy.py  xizang.py
